1. 为主界面添加了单独保存相机位姿的界面 2. 修复了保存时可能的崩溃问题（外参未知/matrix非方阵/目录不存在） 3. 添加了使用RANSAC方法求位姿和F矩阵 4. 优化了路点的融合逻辑

--- a/app/ReflectiveSticker/MainWindow.ui
+++ b/app/ReflectiveSticker/MainWindow.ui
@@ -209,6 +209,7 @@
     <addaction name="actionLoad_Config"/>
     <addaction name="actionSave_Config"/>
     <addaction name="actionSave_Data"/>
+    <addaction name="actionSave_Frame_Pose"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
@@ -238,6 +239,11 @@
   <action name="actionSave_Data">
    <property name="text">
     <string>Save Data</string>
+   </property>
+  </action>
+  <action name="actionSave_Frame_Pose">
+   <property name="text">
+    <string>Save Frame Pose</string>
    </property>
   </action>
  </widget>
